feat, novas features

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -41,7 +41,7 @@
               </a>
             </li>
             <li class="group relative">
-              <a href="#"
+              <a href="/empresarial/home"
                 class="text-gray-700 hover:text-blue-700 font-medium pb-2 border-b-2 border-transparent hover:border-blue-700 transition-colors duration-200"
                 [class.text-blue-700]="activeTab === 'business'"
                 [class.border-blue-700]="activeTab === 'business'"
