--- a/src/app/residencial/pages/home/home.component.html
+++ b/src/app/residencial/pages/home/home.component.html
@@ -4,5 +4,6 @@
 <app-ofertas></app-ofertas>
 <app-cta></app-cta>
 <app-servicos></app-servicos>
+<app-planos></app-planos>
 <app-letter></app-letter>
 
