--- a/src/app/residencial/components/ofertas/ofertas.component.html
+++ b/src/app/residencial/components/ofertas/ofertas.component.html
@@ -1,35 +1,44 @@
-<div class="mt-28 mb-28 py-12 bg-gray-200 dark:bg-gray-800">
-  <div class="max-w-screen-md mx-auto text-center">
+<div class="mt-10 mb-10 py-12 bg-gray-200 dark:bg-gray-800">
+    <div class="max-w-screen-md mx-auto text-center px-4">
       <h1 class="mb-4 text-3xl font-bold dark:text-white">Como funciona o protocolo Lorawan ?</h1>
-      <p class="text-gray-500 dark:text-white">LoRaWAN é um protocolo sem fio de longo alcance e baixo consumo que conecta dispositivos IoT a gateways, que enviam os dados para um servidor de rede.</p>
-  </div>
-
-  <div class="flex flex-col justify-center space-y-5 md:flex-row md:space-y-0 md:space-x-6 lg:space-x-8 mt-7 mb-8">
-      <!-- Primeira imagem com mais largura -->
-      <div class="relative md:w-5/12 lg:w-2/5 h-64 md:h-80">
-          <img class="rounded-2xl w-full h-full object-cover" src="https://images.unsplash.com/photo-1467232004584-a241de8bcf5d?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=M3w0NzEyNjZ8MHwxfHNlYXJjaHwxM3x8d2Vic2l0ZXxlbnwwfDB8fHwxNzIwMjI4OTA3fDA&ixlib=rb-4.0.3&q=80&w=1080">
-          <div class="absolute transform -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2">
-              <h1 class="text-white mb-3 font-bold text-center uppercase lg:text-xl">Continuar a ler</h1>
-              <button class="w-full px-6 py-3 text-xs text-white transition duration-300 ease-in-out transform border border-2 rounded-full lg:text-md focus:outline-none hover:scale-110 font-medium">Ver Documentação</button>
-          </div>
-      </div>
-
-      <!-- Segunda imagem -->
-      <div class="relative md:w-3/12 lg:w-1/4 h-64 md:h-80">
-          <img class="rounded-2xl w-full h-full object-cover" src="https://images.unsplash.com/photo-1516321318423-f06f85e504b3?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=M3w0NzEyNjZ8MHwxfHNlYXJjaHw3fHxNZW50b3J8ZW58MHwwfHx8MTcyMDIyNzU1Nnww&ixlib=rb-4.0.3&q=80&w=1080">
-          <div class="absolute transform -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2">
-              <h1 class="text-white mb-3 font-bold text-center uppercase lg:text-xl">Ver mais</h1>
-              <button class="w-full px-6 py-3 text-xs text-white transition duration-300 ease-in-out transform bg-indigo-500 border-indigo-400 border border-2 rounded-full lg:text-md focus:outline-none hover:scale-110 font-medium">Ver mais</button>
-          </div>
-      </div>
-
-      <!-- Terceira imagem -->
-      <div class="relative md:w-3/12 lg:w-1/4 h-64 md:h-80">
-        <img class="rounded-2xl w-full h-full object-cover" src="https://images.unsplash.com/photo-1516321318423-f06f85e504b3?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=M3w0NzEyNjZ8MHwxfHNlYXJjaHw3fHxNZW50b3J8ZW58MHwwfHx8MTcyMDIyNzU1Nnww&ixlib=rb-4.0.3&q=80&w=1080">
-        <div class="absolute transform -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2">
-            <h1 class="text-white mb-3 font-bold text-center uppercase lg:text-xl">Ver mais</h1>
-            <button class="w-full px-6 py-3 text-xs text-white transition duration-300 ease-in-out transform bg-indigo-500 border-indigo-400 border border-2 rounded-full lg:text-md focus:outline-none hover:scale-110 font-medium">Ver mais</button>
+      <p class="text-gray-500 dark:text-white">
+        LoRaWAN é um protocolo sem fio de longo alcance e baixo consumo que conecta dispositivos IoT a gateways, que enviam os dados para um servidor de rede.
+      </p>
+    </div>
+  
+    <div class="flex flex-col md:flex-row flex-wrap justify-center items-stretch gap-6 mt-10 px-4">
+      <!-- Primeira imagem -->
+      <div class="relative w-full md:w-5/12 lg:w-2/5 h-64 md:h-80">
+        <img class="rounded-2xl w-full h-full object-cover" src="https://images.unsplash.com/photo-1467232004584-a241de8bcf5d?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=M3w0NzEyNjZ8MHwxfHNlYXJjaHwxM3x8d2Vic2l0ZXxlbnwwfDB8fHwxNzIwMjI4OTA3fDA&ixlib=rb-4.0.3&q=80&w=1080">
+        <div class="absolute inset-0 flex flex-col items-center justify-center">
+          <h1 class="text-white mb-3 font-bold text-center uppercase text-base md:text-lg lg:text-xl">Continuar a ler</h1>
+          <button class="px-6 py-3 text-xs md:text-sm lg:text-md text-white border border-white rounded-full hover:scale-110 transition font-medium">
+            Ver Documentação
+          </button>
         </div>
       </div>
+  
+      <!-- Segunda imagem -->
+      <div class="relative w-full md:w-3/12 lg:w-1/4 h-64 md:h-80">
+        <img class="rounded-2xl w-full h-full object-cover" src="/images/voip.jpg">
+        <div class="absolute inset-0 flex flex-col items-center justify-center">
+          <h1 class="text-white mb-3 font-bold text-center uppercase text-base md:text-lg lg:text-xl">Ver mais</h1>
+          <button class="px-6 py-3 text-xs md:text-sm lg:text-md text-white bg-indigo-500 border border-indigo-400 rounded-full hover:scale-110 transition font-medium">
+            Ver mais
+          </button>
+        </div>
+      </div>
+  
+      <!-- Terceira imagem -->
+      <div class="relative w-full md:w-3/12 lg:w-1/4 h-64 md:h-80">
+        <img class="rounded-2xl w-full h-full object-cover" src="/images/internet.png">
+        <div class="absolute inset-0 flex flex-col items-center justify-center">
+          <h1 class="text-white mb-3 font-bold text-center uppercase text-base md:text-lg lg:text-xl">Ver mais</h1>
+          <button class="px-6 py-3 text-xs md:text-sm lg:text-md text-white bg-indigo-500 border border-indigo-400 rounded-full hover:scale-110 transition font-medium">
+            Ver mais
+          </button>
+        </div>
+      </div>
+    </div>
   </div>
-</div>
+  
